<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@color/gvsu_blue">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etUserName"
        android:textEditSuggestionItemLayout="@string/login_sug_username"
        android:layout_below="@+id/imageView"
        android:textColor="@color/gvsu_blue_dark"
        android:background="@color/white"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_alignRight="@+id/etPassword"
        android:layout_alignLeft="@+id/etPassword"
        android:nextFocusDown="@id/etPassword"
        android:hint="@string/hnt_username"
        android:textColorHint="@color/gvsu_text_light"
        android:imeOptions="actionNext"
        android:inputType="textVisiblePassword|textNoSuggestions"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:inputType="textPassword"
        android:textColor="@color/gvsu_blue_dark"
        android:background="@color/white"
        android:gravity="center"
        android:ems="10"
        android:id="@+id/etPassword"
        android:textEditSuggestionItemLayout="@string/login_sug_password"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/etUserName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:imeOptions="actionGo"
        android:hint="@string/hnt_password"
        android:textColorHint="@color/gvsu_text_light"

        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/btn_label_login"
        android:id="@+id/btnLogin"
        android:background="@color/white"
        android:layout_below="@+id/etPassword"
        android:layout_marginTop="20dp"
        android:layout_alignRight="@+id/etPassword"
        android:layout_alignLeft="@+id/etPassword" />
    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="200dp"
        android:background="@color/gvsu_blue_light"
        android:id="@+id/rl_progress_bar"
        android:layout_above="@+id/btnLogin"
        android:layout_centerHorizontal="true"
        android:visibility="gone">


    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:visibility="visible"
        android:layout_marginBottom="20dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"

        />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/lbl_login_spinner"
            android:id="@+id/textView"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"

            />
    </RelativeLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        
        android:src="@drawable/gvsu_login_logo" />

</RelativeLayout>
